--- a/css/about.css
+++ b/css/about.css
@@ -1,30 +1,23 @@
-.main {
+.about {
   padding-bottom: 50px;
 }
 
-.main__container {
+.about__container {
   display: flex;
   align-items: center;
   gap: 40px;
 }
 
-.main__title {
+.about__title {
   font-family: "Roboto";
   font-size: 64px;
   font-weight: 600;
   margin-bottom: 20px;
 }
 
-.main__text {
+.about__text {
   margin-bottom: 20px;
   font-size: 18px;
   opacity: 0.7;
 }
 
-.main__btn {
-  font-size: 20px;
-  border-radius: 5px;
-  padding: 15px 30px;
-  background-color: #3a68b8;
-  color: white;
-}
