--- a/css/settings.css
+++ b/css/settings.css
@@ -20,11 +20,25 @@ body {
 }
 
 .container {
-  max-width: 1350px;
+  max-width: 1300px;
   padding: 0 20px;
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
