--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 @import url(./css/settings.css);
 @import url(./css/header.css);
 @import url(./css/main.css);
+@import url(./css/about.css);
+@import url(./css/service.css);
+@import url(./css/reviews.css);
+@import url(./css/footer.css);
