--- a/css/service.css
+++ b/css/service.css
@@ -1,6 +1,7 @@
 .service {
   padding-top: 50px;
   padding-bottom: 50px;
+  background: #2f2e2e;
 }
 
 .service__title {
@@ -15,13 +16,22 @@
   display: flex;
   gap: 40px;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .service__list-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   text-align: center;
   border: 1px solid #fff;
   border-radius: 10px;
-  padding: 30px 15px;
+  padding: 30px 30px;
+}
+
+.service__item-img{
+  max-width: 300px;
 }
 
 .service__item-title {
