--- a/css/footer.css
+++ b/css/footer.css
@@ -10,11 +10,18 @@
   gap: 25px;
 }
 
-.footer__list-link {
+.footer__list-btn {
   font-size: 18px;
   cursor: pointer;
   border-radius: 5px;
   padding: 15px 30px;
-  background-color: #3a68b8;
+  background-color: #494949;
   color: white;
+  transition: background-color 0.3s ease-in-out;
+}
+
+@media (any-hover: hover) {
+  .footer__list-btn:hover {
+    background-color: #696969;
+  }
 }
