--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 .main {
-  padding-bottom: 50px;
+  padding-top: 120px;
+  padding-bottom: 170px;
+  position: relative;
 }
 
 .main__container {
@@ -8,11 +10,75 @@
   gap: 40px;
 }
 
+.main-content {
+  max-width: 550px;
+}
+
+.main__athena {
+  max-width: 200px;
+  max-height: 200px;
+  position: absolute;
+  top: 10%;
+  left: 75%;
+  animation: athena 8s infinite;
+  animation-direction: alternate;
+}
+
+.main__reaper {
+  max-width: 200px;
+  max-height: 200px;
+  position: absolute;
+  top: 50%;
+  left: 55%;
+  animation: reaper 10s infinite;
+  animation-direction: alternate;
+}
+
+@keyframes athena {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  25% {
+    transform: translate(12px, 18px) rotate(2deg);
+  }
+  50% {
+    transform: translate(-18px, -14px) rotate(-2deg);
+  }
+  75% {
+    transform: translate(14px, -6px) rotate(1.5deg);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+}
+
+@keyframes reaper {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  20% {
+    transform: translate(8px, 12px) rotate(-1.5deg);
+  }
+  50% {
+    transform: translate(-14px, -18px) rotate(2deg);
+  }
+  80% {
+    transform: translate(10px, -8px) rotate(-1deg);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+}
+
 .main__title {
   font-family: "Roboto";
   font-size: 64px;
   font-weight: 600;
   margin-bottom: 20px;
+}
+
+.main__title span {
+  font-family: "Oswald";
 }
 
 .main__text {
@@ -25,6 +91,13 @@
   font-size: 20px;
   border-radius: 5px;
   padding: 15px 30px;
-  background-color: #3a68b8;
+  background-color: #494949;
   color: white;
+  transition: background-color 0.3s ease-in-out;
+}
+
+@media (any-hover: hover) {
+  .main__btn:hover {
+    background-color: #696969;
+  }
 }
