--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 
 .main-content {
   max-width: 550px;
+  z-index: 99;
 }
 
 .main__athena {
@@ -22,6 +23,7 @@
   left: 75%;
   animation: athena 8s infinite;
   animation-direction: alternate;
+  z-index: 80 !important;
 }
 
 .main__reaper {
@@ -32,6 +34,7 @@
   left: 55%;
   animation: reaper 10s infinite;
   animation-direction: alternate;
+  z-index: 80 !important;
 }
 
 @keyframes athena {
@@ -82,7 +85,7 @@
 }
 
 .main__text {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   font-size: 18px;
   opacity: 0.7;
 }
@@ -91,7 +94,7 @@
   font-size: 20px;
   border-radius: 5px;
   padding: 15px 30px;
-  background-color: #494949;
+  background-color: #70b3ea;
   color: white;
   transition: background-color 0.3s ease-in-out;
 }
@@ -99,5 +102,43 @@
 @media (any-hover: hover) {
   .main__btn:hover {
     background-color: #696969;
+  }
+}
+
+@media (max-width: 768px) {
+  .main {
+    padding-top: 70px;
+    padding-bottom: 150px;
+  }
+  .main__athena {
+    display: none;
+  }
+  .main__reaper {
+    display: none;
+  }
+  .main__container {
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .main-content {
+    text-align: center;
+  }
+}
+
+@media (max-width: 512px) {
+  .main {
+    padding-top: 40px;
+    padding-bottom: 130px;
+  }
+}
+
+@media (max-width: 400px) {
+  .main__title {
+    font-size: 44px;
   }
 }
