--- a/css/service.css
+++ b/css/service.css
@@ -1,15 +1,31 @@
 .service {
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 70px;
   background: #2f2e2e;
+}
+
+.service__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .service__title {
   font-family: "Roboto";
   font-size: 64px;
   font-weight: 600;
-  margin-bottom: 40px;
+  margin-bottom: 5px;
   text-align: center;
+}
+
+.service__text {
+  margin-bottom: 40px;
+  font-size: 18px;
+  opacity: 0.7;
+  font-style: italic;
+  text-align: center;
+  max-width: 900px;
 }
 
 .service__list {
@@ -18,19 +34,20 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .service__list-item {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 7px;
   text-align: center;
   border: 1px solid #fff;
   border-radius: 10px;
   padding: 30px 30px;
 }
 
-.service__item-img{
+.service__item-img {
   max-width: 300px;
 }
 
@@ -44,4 +61,19 @@
 
 .service__item-price {
   font-weight: 700;
+}
+
+.service__btn {
+  font-size: 20px;
+  border-radius: 5px;
+  padding: 15px 30px;
+  background-color: #70b3ea;
+  color: white;
+  transition: background-color 0.3s ease-in-out;
+}
+
+@media (any-hover: hover) {
+  .service__btn:hover {
+    background-color: #696969;
+  }
 }
