--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@
 .logo {
   font-family: "Oswald";
   font-size: 27px;
+  z-index: 999;
 }
 
 .header__list {
@@ -83,7 +84,7 @@
   width: 100%;
   height: 100%;
   z-index: 101;
-  background: #24263b;
+  background: #2b2b2b;
   animation: burger 0.4s ease-in-out;
 }
 
