--- a/css/about.css
+++ b/css/about.css
@@ -25,6 +25,7 @@
 
 .about__img {
   max-width: 625px;
+  width: 100%;
 }
 
 @media (max-width: 1000px) {
@@ -42,14 +43,11 @@
   }
 }
 
-@media (max-width: 512px) {
-  .about__img {
-    max-width: 450px;
+@media (max-width: 420px) {
+  .about__title{
+    font-size: 44px;
   }
-}
-
-@media (max-width: 400px) {
-  .about__img {
-    max-width: 350px;
+  .about__text{
+    font-size: 15px;
   }
 }
