--- a/css/footer.css
+++ b/css/footer.css
@@ -38,3 +38,25 @@
     gap: 20px;
   }
 }
+
+@media (max-width: 420px) {
+  .service__title {
+    font-size: 44px;
+  }
+  .footer__text {
+    display: none;
+  }
+  .footer__list-btn {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 360px) {
+  .footer__container {
+    padding: 30px 50px;
+  }
+  .footer__list-btn {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+}
