--- a/css/reviews.css
+++ b/css/reviews.css
@@ -47,6 +47,7 @@
 
 .reviews__img {
   max-width: 550px;
+  width: 100%;
 }
 
 @media (max-width: 1000px) {
@@ -57,7 +58,7 @@
 }
 
 @media (max-width: 900px) {
-  .reviews{
+  .reviews {
     padding-bottom: 0;
   }
   .reviews__container {
@@ -65,20 +66,26 @@
     text-align: center;
     gap: 0;
   }
-  .reviews-content{
+  .reviews-content {
     padding-top: 50px;
   }
 }
 
-@media (max-width: 512px) {
-  .reviews__img {
-    max-width: 450px;
+
+@media (max-width: 420px) {
+  .reviews__title {
+    font-size: 44px;
+  }
+  .reviews__text {
+    font-size: 15px;
+  }
+  .reviews__btn {
+    font-size: 16px;
   }
 }
 
-@media (max-width: 400px) {
-  .reviews__img {
-    max-width: 350px;
+@media (max-width: 360px){
+  .reviews__container{
+    gap: 20px;
   }
-}
-
+} 
