--- a/css/service.css
+++ b/css/service.css
@@ -40,15 +40,16 @@
 .service__list-item {
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 10px;
   text-align: center;
   border: 1px solid #fff;
   border-radius: 10px;
-  padding: 30px 30px;
+  padding: 30px;
 }
 
 .service__item-img {
   max-width: 300px;
+  width: 100%;
 }
 
 .service__item-title {
@@ -75,5 +76,26 @@
 @media (any-hover: hover) {
   .service__btn:hover {
     background-color: #696969;
+  }
+}
+
+@media (max-width: 420px) {
+  .service__title {
+    font-size: 44px;
+  }
+  .service__text {
+    font-size: 15px;
+  }
+  .service__btn {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 360px) {
+  .service{
+    padding-bottom: 50px;
+  }
+  .service__list-item {
+    padding: 20px;
   }
 }
